fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ p {
 img {
   max-width: 120px;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 a {
